# comfyui-default-values-manager

./: .gitignore  README.md  __init__.py  pyproject.toml
src/: constants.js  defaults-manager.js  main.js  settings-dialog.js  widget-builder.js
