[project]
name = "comfyui-default-values-manager"
description = "Adds a setting that lets you configure the default input values that nodes will load with"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/christian-byrne/comfyui-default-values-manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "christian-byrne"
DisplayName = "comfyui-default-values-manager"
Icon = ""
